--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
           <configuration>
             <source>8</source>
             <target>8</target>
+	<testFailureIgnore>true</testFailureIgnore>
           </configuration>
         </plugin>
         <plugin>
